Update Day 2 Take Home Assignment (1).ipynb

--- a/Day 2 Take Home Assignment (1).ipynb
+++ b/Day 2 Take Home Assignment (1).ipynb
@@ -47,6 +47,7 @@
     "IFR=tk.Button(main_window,text=\"IFR\",bg=\"green\",fg=\"white\",width=10,command=ifr_clicked).grid(column=2,row=10)\n",
     "\n",
     "main_window.mainloop()"
+    "#GUI is great"
    ]
   },
   {
